--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<title>assignment</title>
-</head>
-<body>
-<header>
-<div id="name">
-	<p>Dark_side</p>
+	<head>
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<title>assignment</title>
+	</head>
+	<body>
+		<header>
+			<div class="name">
+				<div class="logo"><p>Dark_side</p></div>
 
-	<div id="navigation">
-		<ul>
-			<li><a href="#">home</a></li>
-			<li><a href="#">portfoli</a></li>
-			<li><a href="#">about</a></li>
-			<li><a href="#">contact</a></li>
-		</ul>
-	</div>
-</header>
+				<div class="navigation">
+					<ul>
+						<li><a href="#">home</a></li>
+						<li><a href="#">portfoli</a></li>
+						<li><a href="#">about</a></li>
+						<li><a href="#">contact</a></li>
+					</ul>
+				</div>
+			</div>
+				<div id="image">
+				<img src="images/finall.jpg">
+			</div>
+		</header>
+		<br><hr>
+		<section>
+			
+		</section>
+		<footer>
+			<div id="contact">
+			<ul>
+				<li>+977-9862038516</li>
+				<li><a href="https://www.facebook.com/rroszal"><img src="images/fb.jpg"></a></li>
+			</ul>
 
-</body>
+		
+			</div>
+		</footer>
+	</body>
 </html>
