--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<title>assignment</title>
 	</head>
 	<body>
@@ -11,10 +11,10 @@
 
 				<div class="navigation">
 					<ul>
-						<li><a href="#">home</a></li>
-						<li><a href="#">portfoli</a></li>
-						<li><a href="#">about</a></li>
-						<li><a href="#">contact</a></li>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -24,16 +24,36 @@
 		</header>
 		<br><hr>
 		<section>
+			<div class="main">
+				<h3>About</h3>
+				<img src="images/me.png"><br>
+				<p>Hy My name is Rojal Pradhan and I am completing the bachelor degree from NAMI college.  </p><br><a href="index.html" target="blank">read more</a>
+			</div>
+			<div class="main">
+				<h3>Portfolio</h3>
+				<img src="images/laptop.jpg"><br>
+				<p>this part is of portfolio</p>
+			</div>
 			
+			<div class="main">
+			<img src=""><br>
+			 <h3>Contact</h3>
+			 <p>this is my contact part</p>
+			</div>
 		</section>
 		<footer>
+				
 			<div id="contact">
-			<ul>
-				<li>+977-9862038516</li>
-				<li><a href="https://www.facebook.com/rroszal"><img src="images/fb.jpg"></a></li>
-			</ul>
+				<h2>Connect with me</h2>
+				<ul>
+					<li><a href="https://www.instagram.com/_official_dark_sider/" target="blank"><img src="images/ig.jpg"></a></li>
+					<li><a href="https://www.facebook.com/rroszal" target="blank"><img src="images/fb.jpg"></a></li>
+				</ul>
 
 		
+			</div>
+			<div class="text">
+				<h2>developed by Rojal Pradhan</h2>
 			</div>
 		</footer>
 	</body>
