bio is added march 12

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 				<div class="navigation">
 					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="bio.html">About</a></li>
+						<li><a href="#">CV</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
@@ -22,23 +22,30 @@
 				<img src="images/finall.jpg">
 			</div>
 		</header>
-		<br><hr>
+		
 		<section>
 			<div class="main">
 				<h3>About</h3>
 				<img src="images/me.png"><br>
-				<p>Hy My name is Rojal Pradhan and I am completing the bachelor degree from NAMI college.  </p><br><a href="index.html" target="blank">read more</a>
+				<p>Hy My name is Rojal Pradhan and I am completing the bachelor degree from NAMI college.I am really interested in coding, and developing the programs. I love coding and I was always curious about the computers.  </p> <br>
+		
+				
+				<a href="bio.html">read more</a>
 			</div>
 			<div class="main">
-				<h3>Portfolio</h3>
+				<h3>CV</h3>
 				<img src="images/laptop.jpg"><br>
-				<p>this part is of portfolio</p>
+				<p>The Curriculum Vitae(CV) of me showing the experience and skills with some personal contact numbers, my qualification and my works experience.
+				Also showing my capability and some my interested things.</p><br>
+				<a href="index.html">read more</a>
 			</div>
 			
 			<div class="main">
-			<img src=""><br>
 			 <h3>Contact</h3>
-			 <p>this is my contact part</p>
+			 <img src="images/social.jpg"><br>
+			 <p>If you have any complains or suggestions related to this webpage please 
+			 contact or message me on my social media.You can also contact me on my cell number if you have any problems related to webpage. </p><br>
+			 <a href="index.html">read more</a>
 			</div>
 		</section>
 		<footer>
@@ -53,7 +60,10 @@
 		
 			</div>
 			<div class="text">
-				<h2>developed by Rojal Pradhan</h2>
+				<h2>Developed by Rojal Pradhan</h2>
+			</div>
+			<div class="copy">
+				copyright all right reserved @2017
 			</div>
 		</footer>
 	</body>
