contact details had been added march 15

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="bio.html">About</a></li>
 						<li><a href="#">CV</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -37,7 +37,7 @@
 				<img src="images/laptop.jpg"><br>
 				<p>The Curriculum Vitae(CV) of me showing the experience and skills with some personal contact numbers, my qualification and my works experience.
 				Also showing my capability and some my interested things.</p><br>
-				<a href="index.html">read more</a>
+				<h4>read more</h4>
 			</div>
 			
 			<div class="main">
@@ -45,7 +45,7 @@
 			 <img src="images/social.jpg"><br>
 			 <p>If you have any complains or suggestions related to this webpage please 
 			 contact or message me on my social media.You can also contact me on my cell number if you have any problems related to webpage. </p><br>
-			 <a href="index.html">read more</a>
+			 <a href="contact.html">read more</a>
 			</div>
 		</section>
 		<footer>
