cv has been added march 18bio.html

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
 	</head>
 	<body>
 		<header>
-			<div class="name">
-				<div class="logo"><p>Dark_side</p></div>
-
+			<div class="ee">
+				<div class="imagehover">
+					<img src="images/rojal_logo.gif" alt="right" />
+				</div>
+				<div class="ff">
+					<p>Roszal Pradhan</p>
+				</div>
+				
 				<div class="navigation">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="bio.html">About</a></li>
-						<li><a href="#">CV</a></li>
+						<li><a href="cv.html">CV</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
+				
 				<div id="image">
 				<img src="images/finall.jpg">
 			</div>
@@ -37,7 +43,7 @@
 				<img src="images/laptop.jpg"><br>
 				<p>The Curriculum Vitae(CV) of me showing the experience and skills with some personal contact numbers, my qualification and my works experience.
 				Also showing my capability and some my interested things.</p><br>
-				<h4>read more</h4>
+				<a href="cv.html">read more</a>
 			</div>
 			
 			<div class="main">
