--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>contact</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<header>
@@ -13,7 +14,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="bio.html">About</a></li>
-						<li><a href="#">CV</a></li>
+						<li><a href="cv.html">CV</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
@@ -26,19 +27,19 @@
 			<legend>Contact Form</legend>
 			<div class="aa">
 			<form>
-				<label>First Name:</label>
+				<label>First Name:</label><br>
 				<input type="text" name="firstname" placeholder="Enter your firstname" required><br><br>
 				
 
-				<label>Surname:</label>
+				<label>Surname:</label><br>
 				<input type="text" name="surname" placeholder="Enter your Surname" required><br><br>
 
 
-				<label>Email:</label>
+				<label>Email:</label><br>
 				<input type="text" placeholder="type your email" required><br><br>
 
 
-				<label>Messege:</label>
+				<label>Messege:</label><br>
 				<input type="text" placeholder="type your messege" required><br><br>
 
 				<input type="submit" name="submit">
@@ -46,7 +47,7 @@
 			</form>
 			</div>
 			<div class="bb">
-			<img src="images/me.jpg">
+			<img src="images/Untitled-1.gif">
 			</div>
 			<br><br>
 
@@ -55,8 +56,23 @@
 			<h4>Oh! hy I am here!!!!</h4><br>
 
 		
-
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1766.9122767868369!2d85.34043265805947!3d27.660899371365332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDM5JzM5LjIiTiA4NcKwMjAnMjkuNSJF!5e0!3m2!1sen!2snp!4v1489599897925" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br><br>
+			<div  class="class">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1766.9122767868369!2d85.34043265805947!3d27.660899371365332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjfCsDM5JzM5LjIiTiA4NcKwMjAnMjkuNSJF!5e0!3m2!1sen!2snp!4v1489599897925" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe><br><br>
+				<div class="card1">
+	   				<img src="images/rojal.jpg" alt="Rojal" style="width:100%">
+	    			<div class="box">
+				      	<h1>Rojal Pradhan</h1>
+				      	<p>Northampton University</p>
+				      	<div class="socialmedia">
+					        <a href="#" class="fa fa-dribbble"></a> 
+					        <a href="#" class="fa fa-twitter"></a>  
+					        <a href="#" class="fa fa-linkedin"></a>  
+					        <a href="#" class="fa fa-facebook"></a> 
+		     			</div>
+		     			<p><button>Contact</button></p>
+		    		</div>
+		 		 </div>
+		 	</div>
 		</div>
 	
 	<footer>
