css and cv is modified april 6

--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
 		</header>
 	<div class="cv">
 		<div class="inner">
-			<h3>Cummulative Vitae</h3>
+			<h3>Curriculum Vitae</h3>
 			<p>The Curriculum Vitae(CV) of me showing the experience and skills with some personal contact numbers, my qualification and my works experience.
 				Also showing my capability and some my interested things. </p>
 				<fieldset>
