comment has been added in html and css april 6

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,18 @@
+<!--Name:Rojal pradhan UNID:17425095-->
 <!DOCTYPE html>
 <html>
+<!--html start-->
 <head>
+<!--head part-->
 	<title>contact</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<meta charset="utf-8">
 </head>
+<!--head part ends-->
 <body>
+<!--body starts-->
 	<header>
+	<!--header part starts-->
 			<div class="ee">
 				<div class="imagehover">
 					<img src="images/rojal_logo.gif" alt="logo">
@@ -29,10 +35,12 @@
 				<img src="images/finall.jpg" alt="my bio">
 			</div>
 		</header>
+		<!--header part starts-->
 	
 		<div class="con">
 
 			<fieldset>
+			<!--fieldset starts-->
 			<legend>Contact Form</legend>
 			<div class="aa">
 			<form>
@@ -60,6 +68,7 @@
 			<br><br>
 
 			</fieldset>
+			<!--fieldset ends-->
 
 
 		
@@ -83,7 +92,7 @@
 		</div>
 	
 	<footer>
-				
+	<!--footer start-->	
 			<div id="contact">
 				<h2>Connect with me</h2>
 				<ul>
@@ -100,5 +109,8 @@
 				copyright all right reserved @2017
 			</div>
 		</footer>
+		<!--footer ends-->	
 </body>
+<!--body ends-->
 </html>
+<!--end of html-->
