--- a/cv.html
+++ b/cv.html
@@ -1,11 +1,18 @@
+<!--Name:Rojal pradhan UNID:17425095-->
 <!DOCTYPE html>
 <html>
+<!--start of html-->
 <head>
+<!--head starts-->
 	<title>cv</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
+<!--head ends-->
 <body>
+<!--body start-->
 	<header>
+	<!--header part starts-->
+
 			<div class="ee">
 				<div class="imagehover">
 					<img src="images/rojal_logo.gif" alt="logo" />
@@ -28,6 +35,7 @@
 				<img src="images/finall.jpg" alt="my bio">
 			</div>
 		</header>
+		<!--header part starts-->
 	<div class="cv">
 		<div class="inner">
 			<h3>Curriculum Vitae</h3>
@@ -83,6 +91,7 @@
 		</fieldset>
 	
 		<footer>
+		<!--footer part start-->
 				
 			<div id="contact">
 				<h2>Connect with me</h2>
@@ -100,6 +109,9 @@
 				copyright all right reserved @2017
 			</div>
 		</footer>
+		<!--footer part ends-->
 
 </body>
+<!--body end-->
 </html>
+<!--end of html-->
