--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
+<!--Name:Rojal pradhan UNID:17425095-->
 <!DOCTYPE html>
+<!--html start-->
 <html>
+<!--head part-->
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>assignment</title>
 	</head>
+<!--head part ends-->
 	<body>
+<!--body starts-->
 		<header>
+	<!--header part starts-->
 			<div class="ee">
 				<div class="imagehover">
 					<img src="images/rojal_logo.gif" alt="right" /> 	
@@ -29,8 +35,9 @@
 				<img src="images/finall.jpg" alt="my bio">
 			</div>
 		</header>
-		
+	<!--header part ends-->
 		<section>
+	<!--section part starts-->
 			<div class="main">
 				<h3>About</h3>
 				<img src="images/me.png" alt="me"><br>
@@ -55,8 +62,9 @@
 			 <a href="contact.html">read more</a>
 			</div>
 		</section>
+	<!--section part ends-->
 		<footer>
-				
+		<!--footer part start-->	
 			<div id="contact">
 				<h2>Connect with me</h2>
 				<ul>
@@ -73,5 +81,8 @@
 				copyright all right reserved @2017
 			</div>
 		</footer>
+	<!-- footer part ends-->
 	</body>
+	<!--body ends-->
 </html>
+<!--end of html-->
